updated process-survey-data and .bsearch files